--- a/interfaces/Interfaz de inicio/styles.css
+++ b/interfaces/Interfaz de inicio/styles.css
@@ -6,7 +6,6 @@
     font-size:18px;
     position: relative;
     top: 5px; 
-    left: 5px;
     cursor: pointer;
     }
 
@@ -30,7 +29,7 @@
     font-size:18px;
     position: relative;
     top: 5px;
-    left: 5px;
+    margin-left: 5px;
     cursor: pointer;
     }
 
@@ -70,11 +69,13 @@
     cursor: pointer;
     }
 
-.rectangulo {
-     width: 1510px; 
-     height: 60px; 
-     border: 3px solid #000000;
-     background: #1fadd1;
+.rectangulo_1{
+    width: 100%; 
+    height: 60px; 
+    border: 3px solid #000000;
+    background: #1fadd1;
+    display: flex;
+    justify-content: center;
 }
 
 .restaurante {
