--- a/interfaces/css/estilos_log.css
+++ b/interfaces/css/estilos_log.css
@@ -1,10 +1,19 @@
+.botones_menu{
+    width: 100%;
+    height: 60px;
+    background-color: rgb(57, 153, 153);
+    display: flex;
+    align-items: center;
+    border: 3px solid black;
+    border-radius: 10px;
+}
 .fondo_sesion{
     width: 80%;
     height: 500px;
     margin-top: 25px;
     margin-left: 10%;
     background-color: rgb(57, 153, 153);
-    border: 2px solid black;
+    border: 3px solid black;
     border-radius: 10px;
     display: flex;
     justify-content: center;
@@ -13,7 +22,7 @@
 .botones_menu{
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
 }
 .btn{
     border: 3px solid #000000;
@@ -21,6 +30,7 @@
     width:225px;
     height:50px;
     font-size:18px;
+    cursor: pointer;
 }
 .div_principal{
     width: 100%;
@@ -32,8 +42,24 @@
     background-color: aliceblue;
     width: 65%;
     height: 400px;
-    border: 2px solid black;
+    border: 3px solid black;
     border-radius: 10px;
     padding: -15px;
     text-align: center;
+}
+.btn_login{
+    width: 180px;
+    height: 30px;
+    margin-left: 50px;
+    font-size: 18px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.txt_nombre{
+    width: 260px;
+    height: 28px;
+}
+.txt_contra{
+    width: 260px;
+    height: 30px;
 }
