--- a/interfaces/css/estilos_reg.css
+++ b/interfaces/css/estilos_reg.css
@@ -1,3 +1,6 @@
+h2{
+    text-align: center;
+}
 .botones_menu{
     width: 100%;
     height: 60px;
@@ -8,10 +11,10 @@
     border-radius: 10px;
 }
 .fondo_sesion{
-    width: 80%;
+    width: 65%;
     height: 500px;
     margin-top: 25px;
-    margin-left: 10%;
+    margin-left: 17%;
     background-color: rgb(57, 153, 153);
     border: 3px solid black;
     border-radius: 10px;
@@ -32,39 +35,34 @@
     font-size:18px;
     cursor: pointer;
 }
-.div_principal{
-    width: 100%;
-    height: 600px;
-    display:inline-block;
-    justify-content: space-around;
-}
-.iniciar_sesion{
+.div_registrar{
     background-color: aliceblue;
-    width: 65%;
-    height: 400px;
+    width: 95%;
+    height: 90%;
     border: 3px solid black;
     border-radius: 10px;
     padding: -15px;
+    
+}
+.content{
+    background-color: aliceblue;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.div_datos{
+    background-color: aliceblue;;
+    width: 80%;
+    text-align: right;
+}
+.div_datos1{
+    background-color: aliceblue;;
+    width: 80%;
+    text-align: right;
+}
+.div_btn_com{
     text-align: center;
 }
 a{
     text-decoration: none;
     color: #000000;
 } 
-.btn_login{
-    width: 180px;
-    height: 30px;
-    margin-left: 50px;
-    font-size: 18px;
-    border-radius: 5px;
-    cursor: pointer;
-    background-color: rgb(243, 243, 243);
-}
-.txt_nombre{
-    width: 260px;
-    height: 28px;
-}
-.txt_contra{
-    width: 260px;
-    height: 30px;
-}
