enlaces y orden de los archivos

--- a/interfaces/css/estilos_reg.css
+++ b/interfaces/css/estilos_reg.css
@@ -27,7 +27,7 @@ h2{
     display: flex;
     justify-content: center;
 }
-.btn{
+button{
     border: 3px solid #000000;
     background-color: white;
     width:225px;
