--- a/interfaces/css/estilos_log.css
+++ b/interfaces/css/estilos_log.css
@@ -24,7 +24,7 @@
     display: flex;
     justify-content: center;
 }
-.btn{
+button{
     border: 3px solid #000000;
     background-color: white;
     width:225px;
