--- a/interfaces/index.css
+++ b/interfaces/index.css
@@ -1,4 +1,8 @@
 
+a{
+    text-decoration: none;
+    color: #000000;
+} 
 .botones_menu{
     width: 100%;
     height: 60px;
@@ -14,7 +18,7 @@
     display: flex;
     justify-content: center;
 }
-.btn{
+button{
     border: 3px solid #000000;
     background-color: white;
     width:225px;
