--- a/interfaces/css/estilos_reg.css
+++ b/interfaces/css/estilos_reg.css
@@ -42,6 +42,7 @@ button{
     border: 3px solid black;
     border-radius: 10px;
     padding: -15px;
+    font-size: 23px;
     
 }
 .content{
@@ -66,3 +67,9 @@ a{
     text-decoration: none;
     color: #000000;
 } 
+input[type=text]{
+    width: 200px;
+}
+input[type=password]{
+    width: 200px;
+}
