--- a/interfaces/styles.css
+++ b/interfaces/styles.css
@@ -1,3 +1,10 @@
+.div_servicios{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    align-items: center;
+}
+
+
 a{
     text-decoration: none;
     color: #000000;
